REL-302566 add no-sandbox chrome option

--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -78,6 +78,7 @@
 		<add key="UI.Options.Arguments.DisableInfoBars" value="true" />
 		<add key="UI.Options.Arguments.Headless" value="true" />
 		<add key="UI.Options.Arguments.IgnoreCertificateErrors" value="true" />
+		<add key="UI.Options.Arguments.NoSandbox" value="true" />
 
 		<add key="UI.Options.AdditionalCapabilities.AcceptSslCertificates" value="true" />
 		<add key="UI.Options.AdditionalCapabilities.AcceptInsecureCertificates" value="true" />
