--- a/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/Reg-Prod-Update.config
+++ b/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/Reg-Prod-Update.config
@@ -10,7 +10,6 @@
 
 		<add key="AdminUsername" value="your.name@relativity.com" />
 		<add key="AdminPassword" value="Test1234!" />
-		<add key="UI.SkipUserCreation" value="false" />
 		
 		<!--
 		If non-empty, this workspace will be used in tests instead of new one.
@@ -18,9 +17,10 @@
 		-->
 		<add key="UI.UseThisExistingWorkspace" value=""/>
 
+		<add key="UI.SkipUserCreation" value="true" />
+
 		<add key="UI.SkipDocumentImport" value="false"/>
 		
-		<!--  -->
 		<add key="UI.UseTapiForFileCopy" value="true"/>
 		
 		<add key="UI.TemplateWorkspace" value="RelativityOne Quick Start Template"/>
