--- a/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/Reg-Prod.config
+++ b/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/Reg-Prod.config
@@ -10,16 +10,17 @@
 
 		<add key="AdminUsername" value="your.name@relativity.com" />
 		<add key="AdminPassword" value="Test1234!" />
-		
+
 		<!--
 		If non-empty, this workspace will be used in tests instead of new one.
 		It won't be deleted after test run.
 		-->
 		<add key="UI.UseThisExistingWorkspace" value=""/>
 
+		<add key="UI.SkipUserCreation" value="true" />
+
 		<add key="UI.SkipDocumentImport" value="false"/>
 		
-		<!--  -->
 		<add key="UI.UseTapiForFileCopy" value="true"/>
 		
 		<add key="UI.TemplateWorkspace" value="RelativityOne Quick Start Template"/>
