--- a/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/testvm.config
+++ b/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/testvm.config
@@ -5,10 +5,10 @@
 	</configSections>
 	<appSettings>
 		<add key="ServerBindingType" value="https" />
-		<add key="RelativityInstanceAddress" value="[YOUR VM].kcura.corp" />
+		<add key="RelativityInstanceAddress" value="p-dv-vm-eft9tow.kcura.corp" />
 
 		<add key="UI.UseTapiForFileCopy" value="false"/>
-		<add key="fileshareLocation" value="\\[YOUR VM]\fileshare"/>
+		<add key="fileshareLocation" value="\\p-dv-vm-eft9tow.kcura.corp\fileshare"/>
 
 		<add key="AdminUsername" value="relativity.admin@kcura.com" />
 		<add key="AdminPassword" value="Test1234!" />
@@ -22,6 +22,8 @@
 		It won't be deleted after test run.
 		-->
 		<add key="UI.UseThisExistingWorkspace" value=""/>
+
+		<add key="UI.SkipUserCreation" value="true" />
 		
 		<add key="UI.SkipDocumentImport" value="false"/>
 
