--- a/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/testvm.config
+++ b/Source/kCura.IntegrationPoints.UITests/UiTestsConfig/testvm.config
@@ -5,10 +5,10 @@
 	</configSections>
 	<appSettings>
 		<add key="ServerBindingType" value="https" />
-		<add key="RelativityInstanceAddress" value="p-dv-vm-eft9tow.kcura.corp" />
+		<add key="RelativityInstanceAddress" value="[YOUR VM].kcura.corp" />
 
 		<add key="UI.UseTapiForFileCopy" value="false"/>
-		<add key="fileshareLocation" value="\\p-dv-vm-eft9tow.kcura.corp\fileshare"/>
+		<add key="fileshareLocation" value="\\[YOUR VM].kcura.corp\fileshare"/>
 
 		<add key="AdminUsername" value="relativity.admin@kcura.com" />
 		<add key="AdminPassword" value="Test1234!" />
