Code cleanup from pr comments

--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -71,8 +71,8 @@
 		<add key="UI.SkipUserCreation" value="true" />
 
 		<!-- Values for all WebDrivers -->
-		<!-- Acceptable values: chrome, firefox -->
-		<add key="UI.Browser" value="chromium" />
+		<!-- Acceptable values: chrome, chromium, firefox -->
+		<add key="UI.Browser" value="chrome" />
 		<add key="UI.BrowserWidth" value="1920" />
 		<add key="UI.BrowserHeight" value="1400" />
 		<add key="UI.Options.Arguments.Headless" value="true" />
