Refactor after CR

--- a/Source/Relativity.Sync.Tests.System/app.config
+++ b/Source/Relativity.Sync.Tests.System/app.config
@@ -2,7 +2,7 @@
 
 <configuration>
   <appSettings>
-    <add key="RelativityHostName" value="p-dv-vm-pspy-6.kcura.corp" />
+    <add key="RelativityHostName" value="" />
     <add key="RelativityUserName" value="relativity.admin@kcura.com" />
     <add key="RelativityUserPassword" value="Test1234!" />
     <add key="RelativityServicesUrl" value="/Relativity.Services" />
