--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<configSections>
 		<section name="kCura.Config" type="System.Configuration.DictionarySectionHandler, System, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
@@ -13,6 +13,8 @@
 		<!-- change to <add key="RelativityInstanceAddress" value="your_testvm.kcura.corp" />-->
 		<add key="RelativityInstanceAddress" value="localhost" />
 		<add key="SQLServerAddress" value="localhost\EDDSINSTANCE001" />
+
+		<add key="RunSettingsJsonPath" value="S:\grazyna-data\two_runsettings.json"/>
 
 	  <!-- If empty, application uses the value of RelativityInstanceAddress -->
 		<add key="targetDbHost" value="" />
