App Versioning. Also updated Helper app with new fields

--- a/Source/Relativity.Sync.Tests.System/Relativity.Sync.Tests.System.csproj
+++ b/Source/Relativity.Sync.Tests.System/Relativity.Sync.Tests.System.csproj
@@ -19,7 +19,7 @@
 	  <Folder Include="Resources\" />
 	</ItemGroup>
 	<ItemGroup>
-	  <None Update="Resources\Relativity_Sync_Test_Helper.rap">
+	  <None Update="Resources\Relativity_Sync_Test_Helper.xml">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </None>
 	</ItemGroup>
