REL-286668 removed unnecessary SDK dlls from custom providers

--- a/DevelopmentScripts/build.xml
+++ b/DevelopmentScripts/build.xml
@@ -181,22 +181,10 @@
         <Destination>Applications\MyFirstProvider.rap</Destination>
         <ApplicationSchema>ApplicationsXML\myFirstProviderApplication.xml</ApplicationSchema>
         <Assemblies>
-          <Assembly>lib\UnitTests\kCura.Apps.Common.Config.dll</Assembly>
-          <Assembly>lib\UnitTests\kCura.Apps.Common.Data.dll</Assembly>
-          <Assembly>lib\UnitTests\kCura.Apps.Common.Utils.dll</Assembly>
-          <Assembly>lib\UnitTests\kCura.IntegrationPoints.Common.dll</Assembly>
-          <Assembly>lib\UnitTests\kCura.IntegrationPoints.Config.dll</Assembly>
           <Assembly>lib\UnitTests\kCura.IntegrationPoints.Contracts.dll</Assembly>
-          <Assembly>lib\UnitTests\kCura.IntegrationPoints.Core.dll</Assembly>
-          <Assembly>lib\UnitTests\kCura.IntegrationPoints.Core.Contracts.dll</Assembly>
-          <Assembly>lib\UnitTests\kCura.IntegrationPoints.Data.dll</Assembly>
-          <Assembly>lib\UnitTests\kCura.IntegrationPoints.Domain.dll</Assembly>
           <Assembly>lib\UnitTests\kCura.IntegrationPoints.SourceProviderInstaller.dll</Assembly>
-          <Assembly>lib\UnitTests\kCura.IntegrationPoints.Synchronizers.RDO.dll</Assembly>
-          <Assembly>lib\UnitTests\kCura.ScheduleQueue.Core.dll</Assembly>
-          <Assembly>lib\UnitTests\Relativity.DataTransfer.MessageService.dll</Assembly>
-          <Assembly>lib\UnitTests\SystemInterface.dll</Assembly>
           <Assembly>lib\UnitTests\Provider.dll</Assembly>
+          <Assembly>lib\UnitTests\kCura.IntegrationPoints.Services.Interfaces.Private.dll</Assembly>
         </Assemblies>
         <ResourceFiles />
         <CustomPages>
@@ -207,23 +195,12 @@
         <Destination>Applications\JsonLoader.rap</Destination>
         <ApplicationSchema>ApplicationsXML\jsonLoaderApplication.xml</ApplicationSchema>
         <Assemblies>
-          <Assembly>lib\UnitTests\kCura.Apps.Common.Config.dll</Assembly>
-          <Assembly>lib\UnitTests\kCura.Apps.Common.Data.dll</Assembly>
-          <Assembly>lib\UnitTests\kCura.Apps.Common.Utils.dll</Assembly>
-          <Assembly>lib\UnitTests\kCura.IntegrationPoints.Common.dll</Assembly>
-          <Assembly>lib\UnitTests\kCura.IntegrationPoints.Config.dll</Assembly>
           <Assembly>lib\UnitTests\kCura.IntegrationPoints.Contracts.dll</Assembly>
-          <Assembly>lib\UnitTests\kCura.IntegrationPoints.Core.dll</Assembly>
-          <Assembly>lib\UnitTests\kCura.IntegrationPoints.Core.Contracts.dll</Assembly>
-          <Assembly>lib\UnitTests\kCura.IntegrationPoints.Data.dll</Assembly>
           <Assembly>lib\UnitTests\kCura.IntegrationPoints.Domain.dll</Assembly>
           <Assembly>lib\UnitTests\kCura.IntegrationPoints.SourceProviderInstaller.dll</Assembly>
-          <Assembly>lib\UnitTests\kCura.IntegrationPoints.Synchronizers.RDO.dll</Assembly>
-          <Assembly>lib\UnitTests\kCura.ScheduleQueue.Core.dll</Assembly>
-          <Assembly>lib\UnitTests\Relativity.DataTransfer.MessageService.dll</Assembly>
-          <Assembly>lib\UnitTests\SystemInterface.dll</Assembly>
           <Assembly>lib\UnitTests\JsonLoader.dll</Assembly>
           <Assembly>lib\UnitTests\Newtonsoft.Json.dll</Assembly>
+          <Assembly>lib\UnitTests\kCura.IntegrationPoints.Services.Interfaces.Private.dll</Assembly>
         </Assemblies>
         <ResourceFiles />
         <CustomPages>
