cherry-picked REL-302566 for adding chromium as usable UI tests browser

--- a/Source/kCura.IntegrationPoints.UITests/kCura.IntegrationPoints.UITests.csproj
+++ b/Source/kCura.IntegrationPoints.UITests/kCura.IntegrationPoints.UITests.csproj
@@ -111,6 +111,8 @@
     <Compile Include="Configuration\TestContext.cs" />
     <Compile Include="Driver\ChromeDriverFactory.cs" />
     <Compile Include="Driver\ChromeOptionsExtensions.cs" />
+    <Compile Include="Driver\ChromiumBasedDriverFactory.cs" />
+    <Compile Include="Driver\ChromiumDriverFactory.cs" />    
     <Compile Include="Driver\DriverExtensions.cs" />
     <Compile Include="Driver\DriverFactory.cs" />
     <Compile Include="Driver\FirefoxDriverFactory.cs" />
