--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -71,7 +71,7 @@
 		<add key="UI.SkipUserCreation" value="true" />
 
 		<!-- Values for all WebDrivers -->
-		<!-- Acceptable values: chrome, firefox -->
+		<!-- Acceptable values: chrome, chromium, firefox -->
 		<add key="UI.Browser" value="chrome" />
 		<add key="UI.BrowserWidth" value="1920" />
 		<add key="UI.BrowserHeight" value="1400" />
