Revert app.config

--- a/Source/Relativity.Sync.Tests.System/app.config
+++ b/Source/Relativity.Sync.Tests.System/app.config
@@ -2,8 +2,8 @@
 
 <configuration>
   <appSettings>
-    <add key="RelativityHostName" value="p-dv-vm-pste.kcura.corp" />
-    <add key="RelativityUserName" value="relativity.admin@relativity.com" />
+    <add key="RelativityHostName" value="" />
+    <add key="RelativityUserName" value="relativity.admin@kcura.com" />
     <add key="RelativityUserPassword" value="Test1234!" />
     <add key="RelativityServicesUrl" value="/Relativity.Services" />
     <add key="RelativityRestUrl" value="/Relativity.Rest/api" />
