--- a/Source/Relativity.Sync.Tests.Unit/Relativity.Sync.Tests.Unit.csproj
+++ b/Source/Relativity.Sync.Tests.Unit/Relativity.Sync.Tests.Unit.csproj
@@ -19,5 +19,8 @@
       <_Parameter1>DynamicProxyGenAssembly2</_Parameter1>
     </AssemblyAttribute>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Executors\NewFolder\" />
+  </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
