REL-286668 install internal providers directly without calls to Kepler

--- a/Source/kCura.IntegrationPoints.Contracts/kCura.IntegrationPoints.Contracts.csproj
+++ b/Source/kCura.IntegrationPoints.Contracts/kCura.IntegrationPoints.Contracts.csproj
@@ -55,6 +55,7 @@
     <Compile Include="IStartUp.cs" />
     <Compile Include="Models\FieldEntry.cs" />
     <Compile Include="Models\DataSourceProviderConfiguration.cs" />
+    <Compile Include="Properties\LocalAssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -63,6 +64,7 @@
     <Compile Include="Provider\IDataSourceProvider.cs" />
     <Compile Include="Provider\IFieldProvider.cs" />
     <Compile Include="Provider\ProviderReadDataException.cs" />
+    <Compile Include="SourceProvider.cs" />
     <Compile Include="SourceProviderConfiguration.cs" />
   </ItemGroup>
   <ItemGroup>
