REL-286668 added interface IProviderInstaller

--- a/Source/kCura.IntegrationPoints.Core/kCura.IntegrationPoints.Core.csproj
+++ b/Source/kCura.IntegrationPoints.Core/kCura.IntegrationPoints.Core.csproj
@@ -72,6 +72,7 @@
     <Compile Include="BatchStatusCommands\Implementations\TargetDocumentsTaggingManagerFactory.cs" />
     <Compile Include="BatchStatusCommands\Implementations\TempTableReader.cs" />
     <Compile Include="Provider\GetApplicationGuid.cs" />
+    <Compile Include="Provider\IProviderInstaller.cs" />
     <Compile Include="Provider\ProviderInstaller.cs" />
     <Compile Include="Provider\ProviderUninstaller.cs" />
     <Compile Include="Validation\IAgentValidator.cs" />
