--- a/Source/kCura.IntegrationPoints.FilesDestinationProvider.Core/kCura.IntegrationPoints.FilesDestinationProvider.Core.csproj
+++ b/Source/kCura.IntegrationPoints.FilesDestinationProvider.Core/kCura.IntegrationPoints.FilesDestinationProvider.Core.csproj
@@ -53,8 +53,8 @@
     <Compile Include="Helpers\FieldConverter.cs" />
     <Compile Include="Helpers\CoreViewFieldInfo.cs" />
     <Compile Include="Installer\ExportRepositoryRegistration.cs" />
-    <Compile Include="Repositories\IFileQueryRepository.cs" />
-    <Compile Include="Repositories\Implementations\FileQueryRepository.cs" />
+    <Compile Include="Repositories\IFileRepository.cs" />
+    <Compile Include="Repositories\Implementations\FileRepository.cs" />
     <Compile Include="Repositories\Implementations\ViewFieldRepository.cs" />
     <Compile Include="Repositories\IViewFieldRepository.cs" />
     <Compile Include="SharedLibrary\ExportServiceFactory.cs" />
@@ -121,6 +121,7 @@
     <Compile Include="SharedLibrary\IFactoryConfigBuilder.cs" />
     <Compile Include="SharedLibrary\ExporterFactoryConfig.cs" />
     <Compile Include="SharedLibrary\LoadFileExportConfig.cs" />
+    <Compile Include="Utilities\CommaSeparatedNumbersToArrayConverter.cs" />
     <Compile Include="Validation\Parts\DocumentExportSettingsValidator.cs" />
     <Compile Include="Validation\Parts\ExportFileValidator.cs" />
     <Compile Include="Validation\Parts\ExportFileValidatorBase.cs" />
