Rename key in appconfig

--- a/Source/kCura.IntegrationPoint.Tests.Core/app.config
+++ b/Source/kCura.IntegrationPoint.Tests.Core/app.config
@@ -14,7 +14,7 @@
 		<add key="RelativityInstanceAddress" value="localhost" />
 		<add key="SQLServerAddress" value="localhost\EDDSINSTANCE001" />
 
-		<add key="RunSettingsJsonPath" value="C:\example\file.json"/>
+		<add key="GrazynaRunSettingsJsonPath" value="C:\example\file.json"/>
 
 	  <!-- If empty, application uses the value of RelativityInstanceAddress -->
 		<add key="targetDbHost" value="" />
