--- a/Source/kCura.IntegrationPoints.Core/kCura.IntegrationPoints.Core.csproj
+++ b/Source/kCura.IntegrationPoints.Core/kCura.IntegrationPoints.Core.csproj
@@ -71,8 +71,10 @@
     <Compile Include="BatchStatusCommands\Implementations\TargetDocumentsTaggingManager.cs" />
     <Compile Include="BatchStatusCommands\Implementations\TargetDocumentsTaggingManagerFactory.cs" />
     <Compile Include="BatchStatusCommands\Implementations\TempTableReader.cs" />
-    <Compile Include="Provider\ApplicationGuidFinder.cs" />
-    <Compile Include="Provider\IApplicationGuidFinder.cs" />
+    <Compile Include="Provider\Internals\ApplicationGuidFinder.cs" />
+    <Compile Include="Provider\Internals\DataProviderFactoryFactory.cs" />
+    <Compile Include="Provider\Internals\IApplicationGuidFinder.cs" />
+    <Compile Include="Provider\Internals\IDataProviderFactoryFactory.cs" />
     <Compile Include="Provider\IRipProviderInstaller.cs" />
     <Compile Include="Provider\IRipProviderUninstaller.cs" />
     <Compile Include="Provider\RipProviderInstaller.cs" />
