--- a/Source/Relativity.Sync.Tests.Unit/app.config
+++ b/Source/Relativity.Sync.Tests.Unit/app.config
@@ -2,12 +2,12 @@
 
 <configuration>
   <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <Paket>True</Paket>
-        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-65535.65535.65535.65535" newVersion="4.9.1.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
+    
+  <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+  <dependentAssembly>
+    <Paket>True</Paket>
+    <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+    <bindingRedirect oldVersion="0.0.0.0-65535.65535.65535.65535" newVersion="4.9.1.0" />
+  </dependentAssembly>
+</assemblyBinding></runtime>
 </configuration>
