--- a/Source/Rip.SystemTests/Rip.SystemTests.csproj
+++ b/Source/Rip.SystemTests/Rip.SystemTests.csproj
@@ -32,7 +32,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Castle.Windsor, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc" />
-    <Reference Include="Relativity, Version=10.2.61.77, Culture=neutral, PublicKeyToken=null" />
+    <Reference Include="Relativity, Version=10.2.71.112, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Relativity\lib\net462\Relativity.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
