REL-286668 unit tests for SourceProviderExtensions, renamed dto objects

--- a/DevelopmentScripts/build.xml
+++ b/DevelopmentScripts/build.xml
@@ -101,6 +101,7 @@
       <DLL type="x64">lib\UnitTests\kCura.IntegrationPoints.LDAPProvider.Tests.dll</DLL>
       <DLL type="x64">lib\UnitTests\kCura.IntegrationPoints.Domain.Tests.dll</DLL>
       <DLL type="x64">lib\UnitTests\kCura.IntegrationPoints.Email.Tests.dll</DLL>
+      <DLL type="x64">lib\UnitTests\kCura.IntegrationPoints.SourceProviderInstaller.Tests.dll</DLL>
     </DLLs>
     <WhiteList>
       <allow>kCura.IntegrationPoints.Agent.Tests.Tasks.SyncCustodianManagerWorkerTests.Execute_GoldFlow</allow>
